--- a/world.html
+++ b/world.html
@@ -292,7 +292,7 @@
                 brazil: [
                     { 
                         name: "CR Flamengo", 
-                        logo: "FLAMENGO1.PNG", 
+                        logo: "FLAMENGO.png", 
                         link: "https://singingfiles.com/show.php?l=0&u=921465&id=69274" 
                     },
                     { 
